--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -14,6 +14,8 @@
     <a href="/PortfolioSite/">Home</a>
     <a href="/PortfolioSite/about/">About</a>
     <a href="/PortfolioSite/blog/">Blog</a>
-    <h1>Donovan's Astro Site, Testing</h1>
+
+    <h1>My Astro Learning Blog</h1>
+    <p>This is where I will post about my journey learning Astro.</p>
   </body>
 </html>
