close to completing unit 2 of tutorial

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const pageTitle = "Home Page";
 ---
 
 <html lang="en">
@@ -8,12 +8,12 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
     <a href="/PortfolioSite/">Home</a>
     <a href="/PortfolioSite/about/">About</a>
     <a href="/PortfolioSite/blog/">Blog</a>
-    <h1>Donovan's Astro Site, Testing</h1>
+    <h1>{pageTitle}</h1>
   </body>
 </html>
