--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,8 @@
 ---
+import "../styles/global.css";
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
+
 const pageTitle = "About Me";
 
 const identity = {
@@ -13,6 +17,10 @@ const skills = ["HTML", "CSS", "JavaScript", "Latex", "Astro"];
 const happy = true;
 const finished = false;
 const goal = 3;
+
+const skillColor = "blue";
+const fontWeight = "bold";
+const textCase = "";
 ---
 
 <html lang="en">
@@ -21,20 +29,21 @@ const goal = 3;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <style>
+    <style define:vars={{ skillColor, fontWeight, textCase }}>
       h1 {
-        color: purple;
+        color: blue;
         font-size: 4rem;
+      }
+      .skill {
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
       }
     </style>
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/PortfolioSite/">Home</a>
-    <a href="/PortfolioSite/about/">About</a>
-    <a href="/PortfolioSite/blog/">Blog</a>
-
-    <h1>{pageTitle}</h1>
+    <Header pageTitle={pageTitle} />
     <h2>... and my new Astro site!</h2>
 
     <p>
@@ -64,7 +73,7 @@ const goal = 3;
     </ul>
     <p>My skills are:</p>
     <ul>
-      {skills.map((skill) => <li>{skill}</li>)}
+      {skills.map((skill) => <li class="skill">{skill}</li>)}
     </ul>
 
     {happy && <p>I am happy to be learning Astro!</p>}
@@ -78,5 +87,9 @@ const goal = 3;
         <p>My goal is not 3 days.</p>
       )
     }
+    <Footer />
   </body>
+  <script>
+    import "../scripts/menu.js";
+  </script>
 </html>
