--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,8 @@
 ---
+import "../styles/global.css";
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
+
 const pageTitle = "My Astro Learning Blog";
 ---
 
@@ -11,16 +15,16 @@ const pageTitle = "My Astro Learning Blog";
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/PortfolioSite/">Home</a>
-    <a href="/PortfolioSite/about/">About</a>
-    <a href="/PortfolioSite/blog/">Blog</a>
-
-    <h1>{pageTitle}</h1>
+    <Header pageTitle={pageTitle} />
     <p>This is where I will post about my journey learning Astro.</p>
     <ul>
       <li><a href="/PortfolioSite/posts/post-1">Post 1</a></li>
       <li><a href="/PortfolioSite/posts/post-2">Post 2</a></li>
       <li><a href="/PortfolioSite/posts/post-3">Post 3</a></li>
     </ul>
+    <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
