--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,9 @@
 ---
+import Navigation from "../components/Navigation.astro";
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
+import "../styles/global.css";
+
 const pageTitle = "Home Page";
 ---
 
@@ -11,9 +16,10 @@ const pageTitle = "Home Page";
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/PortfolioSite/">Home</a>
-    <a href="/PortfolioSite/about/">About</a>
-    <a href="/PortfolioSite/blog/">Blog</a>
-    <h1>{pageTitle}</h1>
+    <Header pageTitle={pageTitle} />
+    <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
