--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,65 @@
 ---
+import { getCollection } from "astro:content";
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Greeting from "../components/Greeting";
-const pageTitle = "Home Page";
+import Button from "../components/Button.astro";
+import Hero from "../components/Hero.astro";
+import PostPreview from "../components/PostPreview.astro";
+import ProjectPreview from "../components/ProjectPreview.astro";
+import siteConfig from "../data/site-config";
+import { sortItemsByDateDesc } from "../utils/data-utils";
+
+import Content from "../content/pages/about.md";
+
+const posts = (await getCollection("blog")).sort(sortItemsByDateDesc);
+const featuredPosts = posts.filter(({ data }) => data.isFeatured);
+
+const projects = (await getCollection("projects")).sort(sortItemsByDateDesc);
+const featuredProjects = projects.filter(({ data }) => data.isFeatured);
 ---
 
-<BaseLayout pageTitle={pageTitle}>
-  <h2>My awesome blog subtitle</h2>
-  <Greeting messages={["Hi", "Hello", "Howdy"]} />
-  <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
+<BaseLayout description={siteConfig.description} image={siteConfig.image}>
+  <Hero />
+  <article class="mb-16 sm:mb-24">
+    <div class="max-w-none prose sm:prose-lg">
+      <h2>Contact</h2>
+      <ul>
+        <li>Office Hours: {siteConfig.officeHours}</li>
+        <li>E-mail: {siteConfig.email}</li>
+      </ul>
+      <h2>Teaching</h2>
+      <p>
+        For Fall 2025, I'm a TA for MATH 140, <em>Foundations of Calculus</em>,
+        a Precalculus course. If you're a student, check the Blackboard page for
+        more information. Otherwise, send me an email!
+      </p>
+      <p>For more on my teaching, see</p><a> about me</a>
+    </div>
+  </article>
+
+  <!-- {
+        featuredProjects?.length > 0 && (
+            <div class="mb-16 sm:mb-24">
+                <h2 class="mb-12 text-xl font-serif italic sm:mb-16 sm:text-2xl">Projects</h2>
+                {featuredProjects.map((project) => (
+                    <ProjectPreview project={project} class="mb-10 sm:mb-12" headingLevel="h3" />
+                ))}
+                <div class="mt-12 sm:mt-16">
+                    <Button href="/projects">View All Projects</Button>
+                </div>
+            </div>
+        )
+    }
+    {
+        featuredPosts?.length > 0 && (
+            <div class="mb-16 sm:mb-24">
+                <h2 class="mb-12 text-xl font-serif italic sm:mb-16 sm:text-2xl">Writing</h2>
+                {featuredPosts.map((post) => (
+                    <PostPreview post={post} class="mb-10 sm:mb-12" headingLevel="h3" />
+                ))}
+                <div class="mt-12 sm:mt-16">
+                    <Button href="/blog">View All Posts</Button>
+                </div>
+            </div>
+        )
+    } -->
 </BaseLayout>
