--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,16 +1,29 @@
 ---
-import Navigation from "./Navigation.astro";
-import Hamburger from "./Hamburger.astro";
-import ThemeIcon from "./ThemeIcon.astro";
-
-const { pageTitle } = Astro.props;
+import siteConfig from "../data/site-config";
 ---
 
-<header>
-  <nav>
-    <Hamburger />
-    <ThemeIcon />
-    <Navigation />
-  </nav>
-  <h1>{pageTitle}</h1>
+<header class="w-full max-w-3xl mx-auto mb-12 sm:mb-16">
+  {
+    siteConfig.logo && siteConfig.logo?.src ? (
+      <a href="/">
+        <img
+          src={siteConfig.logo.src}
+          alt={siteConfig.logo.alt || ""}
+          class="max-h-12"
+        />
+      </a>
+    ) : (
+      <a
+        class="font-serif text-2xl leading-tight font-large text-theme-foreground sm:text-5xl"
+        href="/"
+      >
+        {siteConfig.title}
+      </a>
+    )
+  }
+  {
+    siteConfig.subtitle && (
+      <p class="text-sm leading-tight mt-1">{siteConfig.subtitle}</p>
+    )
+  }
 </header>
