Added extra pages and adjusted the menu settings

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ const hero = siteConfig.hero;
     hero?.image?.src ||
     hero?.text ||
     (hero?.actions && hero.actions.length > 0)) && (
-    <section class="w-full flex flex-col gap-8 mb-16 sm:mb-24">
+    <section class="w-full flex flex-col gap-8 mb-8 sm:mb-12">
       {hero.title && (
         <h1 class="text-3xl leading-tight font-serif font-medium sm:text-5xl sm:leading-tight">
           {hero.title}
@@ -20,7 +20,7 @@ const hero = siteConfig.hero;
       {hero.image?.src && (
         <figure>
           <img
-            class="sm:w-1/2 rounded-full aspect-square object-cover mx-auto"
+            class="w-1/2 rounded-full aspect-square object-cover mx-auto"
             src={hero.image.src}
             loading="lazy"
             decoding="async"
