--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const featuredProjects = projects.filter(({ data }) => data.isFeatured);
 
 <BaseLayout description={siteConfig.description} image={siteConfig.image}>
   <Hero />
-  <article class="mb-16 sm:mb-24">
+  <article class="mb-8 sm:mb-12">
     <div class="max-w-none prose sm:prose-lg">
       <h2>Contact</h2>
       <ul>
@@ -32,7 +32,11 @@ const featuredProjects = projects.filter(({ data }) => data.isFeatured);
         a Precalculus course. If you're a student, check the Blackboard page for
         more information. Otherwise, send me an email!
       </p>
-      <p>For more on my teaching, see</p><a> about me</a>
+      <p>
+        For more on my teaching, see <a href="/PortfolioSite/about">
+          about me</a
+        >
+      </p>
     </div>
   </article>
 
