Added mentoring groups and adjusted information.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,14 +28,15 @@ const featuredProjects = projects.filter(({ data }) => data.isFeatured);
       </ul>
       <h2>Teaching</h2>
       <p>
-        For Fall 2025, I'm a TA for MATH 140, <em>Foundations of Calculus</em>,
-        a Precalculus course. If you're a student, check the Blackboard page for
-        more information. Otherwise, send me an email!
+        For Fall 2025, I'm a teaching assistant for MATH 140, <em
+          >Foundations of Calculus</em
+        >, a precalculus course. If you're a student, check the Blackboard page
+        for more information. Otherwise, send me an email!
       </p>
       <p>
         For more on my teaching, see <a href="/PortfolioSite/about">
           about me</a
-        >
+        >.
       </p>
     </div>
   </article>
