Add Google site verification meta tag

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,6 +15,7 @@ const { showHeader = true, ...head } = Astro.props;
 <!doctype html>
 <html lang="en" class="antialiased break-words">
   <head>
+    <meta name="google-site-verification" content="5PzUMboKIMc8IXIba-NG-LZk3CWEMDLVNloQdoSZJMA" />
     <BaseHead {...head} />
     <script>
       if (localStorage.theme === "light") {
