Simplify footer copyright and site title display

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -46,10 +46,7 @@ const navLinks = siteConfig.footerNavLinks || [];
       )
     }
     <p class="text-sm">
-      &copy; {new Date().getFullYear()}&nbsp;
-      <a class="hover:underline hover:underline-offset-2" href="/">
-        {siteConfig.title}
-      </a>
+      &copy; {new Date().getFullYear()}&nbsp; {siteConfig.title}
     </p>
   </div>
 </footer>
