Clean up Header.astro by commenting links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,12 +13,13 @@ import siteConfig from "../data/site-config";
         />
       </a>
     ) : (
-      <a
+      <!--<a
         class="font-serif text-2xl leading-tight font-large text-theme-foreground sm:text-5xl"
         href="/"
       >
         {siteConfig.title}
-      </a>
+      </a>-->
+      {siteConfig.title}
     )
   }
   {
