--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,7 +19,9 @@ import siteConfig from "../data/site-config";
       >
         {siteConfig.title}
       </a>-->
-      {siteConfig.title}
+      <h1 class="font-serif text-2xl leading-tight font-large text-theme-foreground sm:text-5xl" >
+        {siteConfig.title}
+      </h1>
     )
   }
   {
