--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,9 +28,9 @@ const featuredProjects = projects.filter(({ data }) => data.isFeatured);
       </ul>
       <h2>Teaching</h2>
       <p>
-        For Fall 2025, I'm a teaching assistant for MATH 140, <em
-          >Foundations of Calculus</em
-        >, a precalculus course. If you're a student, check the Blackboard page
+        For Spring 2026, I'm an instructor for MATH 143, <em
+          >Calculus III</em
+        >, the second half of the standard Calculus II course. If you're a student, check the Blackboard page
         for more information. Otherwise, send me an email!
       </p>
       <p>
